feat(types): introduce `MaybeInstance` utility type
Added a new utility type `MaybeInstance` which helps in extracting the instance type from a class constructor or an instance itself. This addition enhances type manipulation capabilities in scenarios where the distinction between a class and its instance types is necessary. The utility is now part of the main exports and has been properly integrated into the build configuration to ensure it is available for use in type definitions across the project.

--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -296,6 +296,11 @@
       "types": "./dist/MaybeFunction.d.ts",
       "import": "./dist/MaybeFunction.js"
     },
+    "./MaybeInstance": {
+      "require": "./dist/MaybeInstance.cjs",
+      "types": "./dist/MaybeInstance.d.ts",
+      "import": "./dist/MaybeInstance.js"
+    },
     "./MaybeLiteral": {
       "require": "./dist/MaybeLiteral.cjs",
       "types": "./dist/MaybeLiteral.d.ts",
