--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,9 @@ on:
   push:
     branches:
       - main
+    paths: 
+      - "packages/**"
+      - "scripts/**"
   pull_request:
     branches:
       - main
