feat(string): add `toSlug` function for slug generation
Introduced a new `toSlug` function in the `string` package, which converts strings into a slug format. This function enhances the `toKebabCase` by also removing diacritics from the string, making it more versatile for URL slug creation. This addition aims to provide a reliable method for generating URL-friendly strings, which is essential for web development.

--- a/packages/string/package.json
+++ b/packages/string/package.json
@@ -176,6 +176,11 @@
       "types": "./dist/toSearchParams.d.ts",
       "import": "./dist/toSearchParams.js"
     },
+    "./toSlug": {
+      "require": "./dist/toSlug.cjs",
+      "types": "./dist/toSlug.d.ts",
+      "import": "./dist/toSlug.js"
+    },
     "./toSnakeCase": {
       "require": "./dist/toSnakeCase.cjs",
       "types": "./dist/toSnakeCase.d.ts",
