--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
         with:
           node-version: 20.x
           cache: "pnpm"
-          registry-url: "https://npm.hsjm.dev"
+          registry-url: "https://registry.npmjs.org/"
 
       # --- Install, build, and test.
       - run: pnpm install
