feat(scripts): moved script files into a new package
Migrated various script files from the root scripts directory to a newly structured `packages/scripts` directory. This change organizes our project better, making it easier to manage and maintain scripts separately from other source files. The restructuring includes updates to imports and dependencies to reflect the new file locations. This adjustment enhances modularity and clarity in the project's directory layout.

--- a/package.json
+++ b/package.json
@@ -24,9 +24,8 @@
     }
   },
   "scripts": {
-    "dev": "tsx ./scripts/build.ts --watch true",
-    "build": "tsx ./scripts/build.ts",
-    "examples:nuxt": "pnpm -F @unshared/examples-nuxt dev",
+    "dev": "tsx ./packages/scripts/cli.ts build --watch true",
+    "build": "tsx ./packages/scripts/cli.ts build",
     "lint": "DEBUG=eslint:eslint eslint --cache",
     "lint:ci": "eslint --cache --ignore-pattern examples",
     "lint:fix": "DEBUG=eslint:eslint eslint --fix --cache",
@@ -35,33 +34,25 @@
     "test:ui": "vitest --ui",
     "test:types": "vitest --typecheck",
     "test:coverage": "vitest --coverage",
-    "commit": "tsx ./scripts/commit.ts",
+    "commit": "tsx ./packages/scripts/cli.ts commit",
     "commit:lint": "commitlint --edit",
-    "publish:ci": "tsx ./scripts/publish.ts",
-    "release": "tsx ./scripts/release.ts",
-    "preinstall": "node ./scripts/forcePnpm.js",
+    "publish:ci": "tsx ./packages/scripts/cli.ts publish",
+    "release": "tsx ./packages/scripts/cli.ts release",
+    "preinstall": "node ./forcePnpm.js",
     "prepare": "husky"
   },
   "devDependencies": {
     "@commitlint/config-pnpm-scopes": "19.1.0",
-    "@types/js-yaml": "4.0.9",
     "@types/node": "20.14.1",
     "@vitest/coverage-v8": "1.6.0",
     "@vitest/ui": "1.6.0",
     "@vitest/utils": "1.6.0",
     "commitlint": "19.3.0",
-    "dotenv": "16.4.5",
     "eslint": "9.4.0",
     "happy-dom": "14.12.0",
     "husky": "9.0.11",
-    "js-yaml": "4.1.0",
     "memfs": "4.8.2",
-    "openai": "4.48.1",
-    "rollup": "4.18.0",
-    "rollup-plugin-dts": "6.1.1",
-    "rollup-plugin-esbuild": "6.1.1",
     "tsx": "4.11.2",
-    "types-pkg-json": "1.2.1",
     "typescript": "5.4.5",
     "vitest": "1.6.0"
   },
