--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -32,9 +32,9 @@ jobs:
       - run: pnpm test:ci
 
       # --- Publish to private registry on main branch.
-      - run: pnpm publish:ci --registry https://npm.hsjm.dev --tag latest
-        env:
-          NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN_PRIVATE}}
+      # - run: pnpm publish:ci --registry https://npm.hsjm.dev --tag latest
+      #   env:
+      #     NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN_PRIVATE}}
 
       # --- Publish to NPM registry on main branch. (Only on tags)
       - run: pnpm publish:ci --registry https://registry.npmjs.org --tag latest
