--- a/packages/scripts/package.json
+++ b/packages/scripts/package.json
@@ -12,23 +12,9 @@
     "type": "git",
     "url": "git@github.com:shorwood/unshared.git"
   },
-  "files": [
-    "dist",
-    "README.md",
-    "LICENSE.md"
-  ],
-  "dependencies": {
-    "@unshared/collection": "workspace:*",
-    "@unshared/fs": "workspace:*",
-    "@unshared/process": "workspace:*",
-    "@unshared/string": "workspace:*",
-    "openai": "4.48.1",
-    "rollup": "4.18.0",
-    "rollup-plugin-dts": "6.1.1",
-    "rollup-plugin-esbuild": "6.1.1",
-    "types-pkg-json": "1.2.1",
-    "types-tsconfig": "2.1.1"
-  },
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "exports": {
     "./build": {
       "require": "./dist/build.cjs",
@@ -101,7 +87,21 @@
       "import": "./dist/index.js"
     }
   },
-  "main": "./dist/index.cjs",
-  "module": "./dist/index.js",
-  "types": "./dist/index.d.ts"
+  "files": [
+    "dist",
+    "README.md",
+    "LICENSE.md"
+  ],
+  "dependencies": {
+    "@unshared/collection": "workspace:*",
+    "@unshared/fs": "workspace:*",
+    "@unshared/process": "workspace:*",
+    "@unshared/string": "workspace:*",
+    "openai": "4.48.1",
+    "rollup": "4.18.0",
+    "rollup-plugin-dts": "6.1.1",
+    "rollup-plugin-esbuild": "6.1.1",
+    "types-pkg-json": "1.2.1",
+    "types-tsconfig": "2.1.1"
+  }
 }
