--- a/packages/scripts/package.json
+++ b/packages/scripts/package.json
@@ -12,6 +12,9 @@
     "type": "git",
     "url": "git@github.com:shorwood/unshared.git"
   },
+  "bin": {
+    "uncli": "./dist/cli.uncli.js"
+  },
   "main": "./dist/index.cjs",
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
