feat(process): add `parseEnvironmentVariables` utility function
Introduced the `parseEnvironmentVariables` function in the `process` package to streamline the extraction and conversion of environment variables based on a specified prefix. This function filters environment variables, converts their names from snake_case to camelCase, and optionally parses them using a provided parser function, facilitating easier and more flexible configuration management. Additionally, updated the package dependencies and exports to support this new functionality.

--- a/packages/process/package.json
+++ b/packages/process/package.json
@@ -46,6 +46,11 @@
       "types": "./dist/parseCliOption.d.ts",
       "import": "./dist/parseCliOption.js"
     },
+    "./parseEnvironmentVariables": {
+      "require": "./dist/parseEnvironmentVariables.cjs",
+      "types": "./dist/parseEnvironmentVariables.d.ts",
+      "import": "./dist/parseEnvironmentVariables.js"
+    },
     "./workerRegister": {
       "require": "./dist/workerRegister.cjs",
       "types": "./dist/workerRegister.d.ts",
@@ -72,6 +77,7 @@
     "@unshared/collection": "workspace:*",
     "@unshared/decorators": "workspace:*",
     "@unshared/functions": "workspace:*",
+    "@unshared/string": "workspace:*",
     "@unshared/types": "workspace:*"
   }
 }
