--- a/examples/nuxt/package.json
+++ b/examples/nuxt/package.json
@@ -11,8 +11,7 @@
     "build-storybook": "storybook build"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^1",
-    "@nuxt/devtools": "1.3.1",
+    "@chromatic-com/storybook": "1.6.1",
     "@nuxtjs/storybook": "7.0.2",
     "@storybook-vue/nuxt": "0.2.6",
     "@storybook/addon-essentials": "8.0.8",
@@ -22,13 +21,13 @@
     "@storybook/builder-vite": "8.0.8",
     "@storybook/test": "8.0.8",
     "@storybook/testing-library": "0.2.2",
-    "@storybook/vue3": "8.0.8",
-    "@storybook/vue3-vite": "^8.1.1",
-    "@unocss/nuxt": "0.60.4",
-    "@unocss/preset-icons": "0.60.4",
-    "@unocss/preset-mini": "0.60.4",
-    "@unocss/preset-web-fonts": "0.60.4",
-    "@unocss/reset": "0.60.4",
+    "@storybook/vue3": "8.2.9",
+    "@storybook/vue3-vite": "^8.2.9",
+    "@unocss/nuxt": "0.62.1",
+    "@unocss/preset-icons": "0.62.1",
+    "@unocss/preset-mini": "0.62.1",
+    "@unocss/preset-web-fonts": "0.62.1",
+    "@unocss/reset": "0.62.1",
     "@unshared/binary": "workspace:*",
     "@unshared/collection": "workspace:*",
     "@unshared/color": "workspace:*",
@@ -42,14 +41,14 @@
     "@unshared/unocss-preset": "workspace:*",
     "@unshared/validation": "workspace:*",
     "@unshared/vue": "workspace:*",
-    "@vueuse/core": "10.10.0",
-    "@vueuse/nuxt": "10.10.0",
+    "@vueuse/core": "10.11.1",
+    "@vueuse/nuxt": "10.11.1",
     "codemirror": "6.0.1",
-    "nuxt": "3.11.2",
+    "nuxt": "3.12.4",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "storybook": "8.0.8",
-    "unocss": "0.60.4",
-    "vue": "3.4.27"
+    "storybook": "8.2.9",
+    "unocss": "0.62.1",
+    "vue": "3.4.37"
   }
 }
