chore(monorepo): remove coverage flag from `test:ci` script
The coverage flag was removed from the `test:ci` script in `package.json` to streamline CI test runs. This change is intended to speed up the continuous integration process by excluding coverage generation during CI tests, as coverage is handled separately in the `test:coverage` script.

--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "lint:ci": "eslint --cache --ignore-pattern examples",
     "lint:fix": "DEBUG=eslint:eslint eslint --fix --cache",
     "test": "vitest --watch",
-    "test:ci": "vitest --run --coverage",
+    "test:ci": "vitest --run",
     "test:ui": "vitest --ui",
     "test:types": "vitest --typecheck",
     "test:coverage": "vitest --coverage",
