chore: update build script in package.json
Adjusted the `build` script to explicitly enable index generation. This change ensures that the `--generateIndexes` flag is consistently applied during the build process, aligning with the expected build behavior and preventing potential inconsistencies in the build outputs.

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "scripts": {
     "dev": "tsx ./packages/scripts/cli.uncli.ts build --watch true",
-    "build": "tsx ./packages/scripts/cli.uncli.ts build --generateIndexes",
+    "build": "tsx ./packages/scripts/cli.uncli.ts build --generateIndexes true",
     "lint": "DEBUG=eslint:eslint eslint --cache",
     "lint:ci": "eslint --cache --ignore-pattern examples",
     "lint:fix": "DEBUG=eslint:eslint eslint --fix --cache",
