feat(vue): introduced `BaseMenu` component
Added a new `BaseMenu` component to provide a configurable menu interface with extensive props for customization. This component supports dynamic positioning, toggle actions, and customizable open/close behaviors, enhancing the flexibility and interactivity of the UI library. The addition includes updated exports and package configurations to integrate the new component seamlessly into the existing framework.

--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -71,6 +71,11 @@
       "types": "./dist/BaseInputToggle.d.ts",
       "import": "./dist/BaseInputToggle.js"
     },
+    "./BaseMenu": {
+      "require": "./dist/BaseMenu.cjs",
+      "types": "./dist/BaseMenu.d.ts",
+      "import": "./dist/BaseMenu.js"
+    },
     "./BaseTable": {
       "require": "./dist/BaseTable.cjs",
       "types": "./dist/BaseTable.d.ts",
