feat!(process): refactor and rename environment variable parsing
Refactored the environment variable parsing logic in the `process` package to enhance functionality and improve code readability. Renamed the file and exported function from `parseEnvironmentVariables` to `parseEnvironments` to better reflect its purpose and usage. Additionally, updated the parsing logic to handle boolean and numeric values more gracefully, and added type definitions to improve TypeScript integration and developer experience.

This change introduces breaking changes as the file name and export have been renamed, which requires updates in dependent modules.

--- a/packages/process/package.json
+++ b/packages/process/package.json
@@ -46,10 +46,10 @@
       "types": "./dist/parseCliOption.d.ts",
       "import": "./dist/parseCliOption.js"
     },
-    "./parseEnvironmentVariables": {
-      "require": "./dist/parseEnvironmentVariables.cjs",
-      "types": "./dist/parseEnvironmentVariables.d.ts",
-      "import": "./dist/parseEnvironmentVariables.js"
+    "./parseEnvironments": {
+      "require": "./dist/parseEnvironments.cjs",
+      "types": "./dist/parseEnvironments.d.ts",
+      "import": "./dist/parseEnvironments.js"
     },
     "./workerRegister": {
       "require": "./dist/workerRegister.cjs",
