feat(vue): introduce `BaseCollapse` component
Implemented a new `BaseCollapse` component within the vue package. This component allows for collapsible sections that can be controlled via props for vertical and horizontal expansion. It supports dynamic style adjustments based on its open or closed state and leverages Vue's reactivity system for efficient DOM updates. This addition is designed to enhance user interfaces by providing a flexible way to hide and show content as needed.

--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -31,6 +31,11 @@
       "types": "./dist/BaseButton.d.ts",
       "import": "./dist/BaseButton.js"
     },
+    "./BaseCollapse": {
+      "require": "./dist/BaseCollapse.cjs",
+      "types": "./dist/BaseCollapse.d.ts",
+      "import": "./dist/BaseCollapse.js"
+    },
     "./BaseContentEditable": {
       "require": "./dist/BaseContentEditable.cjs",
       "types": "./dist/BaseContentEditable.d.ts",
@@ -231,7 +236,6 @@
     "@codemirror/state": "6.4.1",
     "@codemirror/view": "6.33.0",
     "@unshared/collection": "workspace:*",
-    "@unshared/functions": "workspace:*",
     "@unshared/types": "workspace:*",
     "@vueuse/core": "11.0.3",
     "codemirror": "6.0.1"
