feat(types): introduce `ObjectLike` type
Added a new `ObjectLike` type to the types package, which acts as a dictionary or record with default generic types and swapped order parameters. This type enhancement supports more flexible usage scenarios in TypeScript projects, facilitating the use of objects as dictionaries with customizable value and key types. This update makes type handling more robust and versatile across the library.

--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -416,6 +416,11 @@
       "types": "./dist/NumberPositive.d.ts",
       "import": "./dist/NumberPositive.js"
     },
+    "./ObjectLike": {
+      "require": "./dist/ObjectLike.cjs",
+      "types": "./dist/ObjectLike.d.ts",
+      "import": "./dist/ObjectLike.js"
+    },
     "./OmitNever": {
       "require": "./dist/OmitNever.cjs",
       "types": "./dist/OmitNever.d.ts",
