feat(string)!: rename `toLowerCase` and `toUpperCase` to `toLowercase` and `toUppercase`
Renamed the functions `toLowerCase` and `toUpperCase` to `toLowercase` and `toUppercase` respectively, across the package to maintain consistency in naming conventions. This includes updates to the export statements in `index.ts` and adjustments in the `package.json` to reflect the new file names and paths. This change is breaking because it alters the public API of the `string` package, affecting all consumers relying on the original function names.

--- a/packages/string/package.json
+++ b/packages/string/package.json
@@ -156,10 +156,10 @@
       "types": "./dist/toKebabCase.d.ts",
       "import": "./dist/toKebabCase.js"
     },
-    "./toLowerCase": {
-      "require": "./dist/toLowerCase.cjs",
-      "types": "./dist/toLowerCase.d.ts",
-      "import": "./dist/toLowerCase.js"
+    "./toLowercase": {
+      "require": "./dist/toLowercase.cjs",
+      "types": "./dist/toLowercase.d.ts",
+      "import": "./dist/toLowercase.js"
     },
     "./toPascalCase": {
       "require": "./dist/toPascalCase.cjs",
@@ -196,10 +196,10 @@
       "types": "./dist/toUncapitalized.d.ts",
       "import": "./dist/toUncapitalized.js"
     },
-    "./toUpperCase": {
-      "require": "./dist/toUpperCase.cjs",
-      "types": "./dist/toUpperCase.d.ts",
-      "import": "./dist/toUpperCase.js"
+    "./toUppercase": {
+      "require": "./dist/toUppercase.cjs",
+      "types": "./dist/toUppercase.d.ts",
+      "import": "./dist/toUppercase.js"
     },
     "./tokenize": {
       "require": "./dist/tokenize.cjs",
