--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,8 +8,8 @@ on:
     branches:
       - main
     paths: 
-      - "packages/**"
-      - "scripts/**"
+      - 'packages/**'
+      - 'scripts/**'
   pull_request:
     branches:
       - main
@@ -28,8 +28,8 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 20.x
-          cache: "pnpm"
-          registry-url: "https://registry.npmjs.org/"
+          cache: pnpm
+          registry-url: 'https://registry.npmjs.org/'
 
       # --- Install, build, and test.
       - run: pnpm install
