--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -37,6 +37,7 @@
     "@stylistic/eslint-plugin": "2.9.0",
     "@unshared/collection": "workspace:*",
     "@unshared/types": "workspace:*",
+    "@vitest/eslint-plugin": "1.1.7",
     "eslint-merge-processors": "0.1.0",
     "eslint-plugin-antfu": "2.7.0",
     "eslint-plugin-eslint-comments": "3.2.0",
@@ -50,7 +51,6 @@
     "eslint-plugin-promise": "7.1.0",
     "eslint-plugin-sonarjs": "2.0.4",
     "eslint-plugin-unicorn": "56.0.0",
-    "eslint-plugin-vitest": "0.5.4",
     "eslint-plugin-vue": "9.29.1",
     "eslint-plugin-yml": "1.14.0",
     "eslint-processor-vue-blocks": "0.1.2",
