chore(color): apply eslint fixes across color conversion functions
Updated the `colorHslToRgb`, `colorIntegerToRgb`, and `colorRgbToHsl` functions in the `color` package to adhere to eslint rules. Modifications include adjusting variable declarations and ensuring properties are ordered consistently when returned from functions. This commit enhances code readability and maintains consistency with our coding standards.

--- a/packages/color/package.json
+++ b/packages/color/package.json
@@ -78,6 +78,7 @@
     "LICENSE.md"
   ],
   "dependencies": {
-    "@unshared/math": "workspace:*"
+    "@unshared/math": "workspace:*",
+    "@unshared/types": "workspace:*"
   }
 }
