--- a/packages/math/package.json
+++ b/packages/math/package.json
@@ -123,6 +123,7 @@
     "LICENSE.md"
   ],
   "dependencies": {
-    "@unshared/math": "workspace:*"
+    "@unshared/math": "workspace:*",
+    "@unshared/types": "workspace:*"
   }
 }
