chore(nuxt): remove Storybook integration
Removed all Storybook-related configurations, scripts, and dependencies from the Nuxt example project. This includes deleting the Storybook configuration files and updating the `nuxt.config.ts` to remove references to Storybook. Also, the package.json has been cleaned up to eliminate all Storybook dependencies, which simplifies the project setup and reduces the number of dependencies.

--- a/examples/nuxt/package.json
+++ b/examples/nuxt/package.json
@@ -6,28 +6,14 @@
     "dev": "nuxt dev",
     "build": "nuxt build",
     "generate": "nuxi generate",
-    "preview": "nuxt preview",
-    "storybook": "storybook dev --port 6006",
-    "build-storybook": "storybook build"
+    "preview": "nuxt preview"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "1.6.1",
-    "@nuxtjs/storybook": "7.0.2",
-    "@storybook-vue/nuxt": "0.2.6",
-    "@storybook/addon-essentials": "8.0.8",
-    "@storybook/addon-interactions": "8.0.8",
-    "@storybook/addon-links": "8.0.8",
-    "@storybook/blocks": "8.0.8",
-    "@storybook/builder-vite": "8.0.8",
-    "@storybook/test": "8.0.8",
-    "@storybook/testing-library": "0.2.2",
-    "@storybook/vue3": "8.2.9",
-    "@storybook/vue3-vite": "^8.2.9",
-    "@unocss/nuxt": "0.62.3",
-    "@unocss/preset-icons": "0.62.3",
-    "@unocss/preset-mini": "0.62.3",
-    "@unocss/preset-web-fonts": "0.62.3",
-    "@unocss/reset": "0.62.3",
+    "@unocss/nuxt": "0.63.6",
+    "@unocss/preset-icons": "0.63.6",
+    "@unocss/preset-mini": "0.63.6",
+    "@unocss/preset-web-fonts": "0.63.6",
+    "@unocss/reset": "0.63.6",
     "@unshared/binary": "workspace:*",
     "@unshared/collection": "workspace:*",
     "@unshared/color": "workspace:*",
@@ -41,14 +27,14 @@
     "@unshared/unocss-preset": "workspace:*",
     "@unshared/validation": "workspace:*",
     "@unshared/vue": "workspace:*",
-    "@vueuse/core": "11.0.3",
-    "@vueuse/nuxt": "11.0.3",
+    "@vueuse/core": "11.1.0",
+    "@vueuse/nuxt": "11.1.0",
     "codemirror": "6.0.1",
-    "nuxt": "3.13.1",
+    "nuxt": "3.13.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "storybook": "8.2.9",
-    "unocss": "0.62.3",
-    "vue": "3.5.3"
+    "unocss": "0.63.6",
+    "vue": "3.5.12"
   }
 }
