chore(vue): update export entry for `getFileUrl`
Updated the export entry in `package.json` from `getFileInputUrl` to `getFileUrl` to reflect the correct module filename. This change ensures that the module exports align with the actual file names in the distribution, improving consistency and preventing potential import errors.

--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -106,10 +106,10 @@
       "types": "./dist/exposeToDevtool.d.ts",
       "import": "./dist/exposeToDevtool.js"
     },
-    "./getFileInputUrl": {
-      "require": "./dist/getFileInputUrl.cjs",
-      "types": "./dist/getFileInputUrl.d.ts",
-      "import": "./dist/getFileInputUrl.js"
+    "./getFileUrl": {
+      "require": "./dist/getFileUrl.cjs",
+      "types": "./dist/getFileUrl.d.ts",
+      "import": "./dist/getFileUrl.js"
     },
     "./nuxt": {
       "require": "./dist/nuxt.cjs",
