chore(scripts): opt-out of in-source testing
Removed all in-source test blocks and configurations to clean up the main codebase. This change ensures that production code is separate from test configurations, aligning with best practices for code maintenance and clarity. Now, tests will be managed entirely in dedicated test files or external test setups without polluting the primary source files.

--- a/packages/scripts/package.json
+++ b/packages/scripts/package.json
@@ -100,8 +100,9 @@
     "@unshared/fs": "workspace:*",
     "@unshared/process": "workspace:*",
     "@unshared/string": "workspace:*",
+    "@unshared/types": "workspace:*",
     "openai": "4.68.4",
-    "rollup": "4.24.0",
+    "rollup": "4.24.2",
     "rollup-plugin-dts": "6.1.1",
     "rollup-plugin-esbuild": "6.1.1",
     "types-pkg-json": "1.2.1",
