--- a/package.json
+++ b/package.json
@@ -43,18 +43,19 @@
   },
   "devDependencies": {
     "@commitlint/config-pnpm-scopes": "19.5.0",
-    "@types/node": "22.8.1",
-    "@vitest/coverage-v8": "2.1.3",
-    "@vitest/ui": "2.1.3",
-    "@vitest/utils": "2.1.3",
+    "@types/node": "22.8.2",
+    "@unshared/eslint-config": "workspace:*",
+    "@vitest/coverage-v8": "2.1.4",
+    "@vitest/ui": "2.1.4",
+    "@vitest/utils": "2.1.4",
     "commitlint": "19.5.0",
     "eslint": "9.13.0",
     "happy-dom": "15.7.4",
     "husky": "9.1.6",
     "memfs": "4.8.2",
-    "tsx": "4.19.1",
+    "tsx": "4.19.2",
     "typescript": "5.6.3",
-    "vitest": "2.1.3"
+    "vitest": "2.1.4"
   },
   "commitlint": {
     "extends": [
