--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,8 +25,7 @@
     "examples",
     "tsup.config.ts",
     "vitest.config.ts",
-    "eslint.config.mjs",
-    "forcePnpm.js"
+    "eslint.config.mjs"
   ],
   "exclude": [
     "**/node_modules",
