feat(types): add `StringReplace` utility type
Introduced a new utility type `StringReplace` in the `types` package. This type allows for replacing all occurrences of a substring within a string with another substring. It handles edge cases like empty strings, substrings not found, and replacements at the start or end of the string. This utility enhances string manipulation capabilities within the library, providing more robust and flexible string handling for users.

--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -516,6 +516,11 @@
       "types": "./dist/StringNumber.d.ts",
       "import": "./dist/StringNumber.js"
     },
+    "./StringReplace": {
+      "require": "./dist/StringReplace.cjs",
+      "types": "./dist/StringReplace.d.ts",
+      "import": "./dist/StringReplace.js"
+    },
     "./StringSplit": {
       "require": "./dist/StringSplit.cjs",
       "types": "./dist/StringSplit.d.ts",
