feat(types): add `StringJoin` utility type and tests
Introduced a new utility type `StringJoin` along with its test cases in the `types` package. This type simplifies the process of concatenating an array of strings with an optional delimiter. It enhances string manipulation capabilities within the library by providing a more flexible approach to joining strings. The implementation supports various scenarios including empty arrays, arrays with empty strings, and ensures type safety by inferring string types based on the input. This addition is accompanied by the deprecation of `TupleJoin`, directing users to use `StringJoin` for future needs.

--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -506,6 +506,11 @@
       "types": "./dist/StringConstraint.d.ts",
       "import": "./dist/StringConstraint.js"
     },
+    "./StringJoin": {
+      "require": "./dist/StringJoin.cjs",
+      "types": "./dist/StringJoin.d.ts",
+      "import": "./dist/StringJoin.js"
+    },
     "./StringLiteral": {
       "require": "./dist/StringLiteral.cjs",
       "types": "./dist/StringLiteral.d.ts",
