feat(types): introduce `LooseDeep` utility type and corresponding tests
A new utility type `LooseDeep` has been added to the `types` package. This type extends the behavior of `Partial` to make nested `undefined` or `void` properties optional while keeping others required. The implementation leverages the `Pretty` type for better type readability. Corresponding tests ensure the functionality handles various nested structures appropriately. This addition enhances the library's type manipulation tools, offering more flexibility in handling optional properties in complex data structures.

--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -211,6 +211,11 @@
       "types": "./dist/Loose.d.ts",
       "import": "./dist/Loose.js"
     },
+    "./LooseDeep": {
+      "require": "./dist/LooseDeep.cjs",
+      "types": "./dist/LooseDeep.d.ts",
+      "import": "./dist/LooseDeep.js"
+    },
     "./MapValues": {
       "require": "./dist/MapValues.cjs",
       "types": "./dist/MapValues.d.ts",
