feat(client): add new HTTP headers, methods, and status codes
Added new enums for HTTP headers, methods, and status codes to the client package. These additions include detailed documentation for each header, method, and status code, providing clear and comprehensive descriptions directly in the codebase. This enhancement facilitates easier integration and usage of HTTP standards within the client package.

--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -2,7 +2,8 @@
   "name": "@unshared/client",
   "scripts": {
     "build:httpMethods": "tsx ./scripts/buildHttpMethods.ts",
-    "build:httpHeaders": "tsx ./scripts/buildHttpHeaders.ts"
+    "build:httpHeaders": "tsx ./scripts/buildHttpHeaders.ts",
+    "build:httpStatusCodes": "tsx ./scripts/buildHttpStatusCodes.ts"
   },
   "dependencies": {
     "@unshared/types": "workspace:*",
