feat(types): add `Override` utility type and associated tests
Introduced a new utility type `Override` in the `types` package, along with comprehensive tests to ensure its functionality. This type allows for properties of one type to be overwritten by another, providing a flexible tool for manipulating type properties in TypeScript. The addition includes not only the type definition but also several test cases covering different scenarios, ensuring robust behavior across typical use cases. This enhancement will aid developers in more effectively managing and applying type transformations within projects.

--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -451,6 +451,11 @@
       "types": "./dist/OverloadsReturnTypes.d.ts",
       "import": "./dist/OverloadsReturnTypes.js"
     },
+    "./Override": {
+      "require": "./dist/Override.cjs",
+      "types": "./dist/Override.d.ts",
+      "import": "./dist/Override.js"
+    },
     "./Path": {
       "require": "./dist/Path.cjs",
       "types": "./dist/Path.d.ts",
