feat(client): configure package and update index files
This update introduces a comprehensive configuration for the `@unshared/client` package, including setting it as a module, specifying entry points, and organizing exports for better modularity. Additionally, the index files across the client package have been restructured to streamline the export of utilities and OpenAPI-related functionalities. This reorganization supports easier maintainability and enhances the scalability of the package as it grows.

--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,5 +1,52 @@
 {
   "name": "@unshared/client",
+  "type": "module",
+  "version": "0.1.0",
+  "license": "MIT",
+  "sideEffects": false,
+  "author": "Stanley Horwood <stanley@hsjm.io>",
+  "bugs": "https://github.com/shorwood/unshared/issues",
+  "homepage": "https://github.com/shorwood/unshared#readme",
+  "repository": {
+    "directory": "packages/client",
+    "type": "git",
+    "url": "git@github.com:shorwood/unshared.git"
+  },
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    "./createClient": {
+      "require": "./dist/createClient.cjs",
+      "types": "./dist/createClient.d.ts",
+      "import": "./dist/createClient.js"
+    },
+    "./fetch": {
+      "require": "./dist/fetch.cjs",
+      "types": "./dist/fetch.d.ts",
+      "import": "./dist/fetch.js"
+    },
+    "./openapi": {
+      "require": "./dist/openapi.cjs",
+      "types": "./dist/openapi.d.ts",
+      "import": "./dist/openapi.js"
+    },
+    "./utils": {
+      "require": "./dist/utils.cjs",
+      "types": "./dist/utils.d.ts",
+      "import": "./dist/utils.js"
+    },
+    ".": {
+      "require": "./dist/index.cjs",
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js"
+    }
+  },
+  "files": [
+    "dist",
+    "README.md",
+    "LICENSE.md"
+  ],
   "scripts": {
     "build:httpMethods": "tsx ./scripts/buildHttpMethods.ts",
     "build:httpHeaders": "tsx ./scripts/buildHttpHeaders.ts",
