feat(client): add response handling utilities and tests
Introduced new utilities `handleResponse` and `handleResponseStreamJson` along with comprehensive unit tests. These utilities are designed to facilitate the handling of different response types from network requests within the client package, improving error handling, and streamlining response processing. The `handleResponse` utility dynamically processes JSON, text, and other content types based on the `Content-Type` header and supports various lifecycle callbacks such as `onError`, `onSuccess`, etc. The `handleResponseStreamJson` utility specifically handles streaming JSON data, providing a robust solution for real-time data processing scenarios. This enhancement is part of ongoing efforts to bolster the robustness and flexibility of the client's HTTP communication layer.

--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -53,6 +53,7 @@
     "build:httpStatusCodes": "tsx ./scripts/buildHttpStatusCodes.ts"
   },
   "dependencies": {
+    "@unshared/functions": "workspace:*",
     "@unshared/types": "workspace:*",
     "openapi-types": "12.1.3"
   },
